# jarvis

./: .gitignore  CMakeLists.txt  README.md
Jarvis/Source/: EntryPoint.c
assets/plugins/: ExamplePlugin (2).exp  ExamplePlugin.exp  ExamplePlugin.lib  Plugin.lib
